--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 
     <!--    Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -30,7 +30,12 @@
 </head>
 <body>
 
-<p>Hello</p>
+<section class="container">
+    <div id="navbar" class="row">
+        <button class="col-lg-2 btn" onclick="createNew()"> Create New</button>
+        <button class="col-lg-2 btn" onclick="viewArchive()"> Archive</button>
+    </div>
+</section>
 
 </body>
 </html>
