--- a/public/create_new.html
+++ b/public/create_new.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="mb-3">
-            <button type="submit" class="btn btn-primary" style="width: 20%">Save</button>;
+            <button type="button" class="btn btn-primary" style="width: 20%" onclick="makeFigure()">Save</button>;
             <button type="button" class="btn btn-primary" style="width: 20%" onclick="onCancel()">Cancel</button>
         </div>
     </form>
