--- a/public/create_new.html
+++ b/public/create_new.html
@@ -47,13 +47,14 @@
         </div>
 
         <div class="form-group">
-            <label for="row-input">Row</label>
+            <label for="row-input">Column</label>
             <input type="text" class="form-control" id="row-input" placeholder="Price">
         </div>
         <div class="form-group">
-            <label for="col-input">Column</label>
-            <input type="text" class="form-control" id="col-input" aria-describedby="emailHelp" placeholder="Enter email">
+            <label for="col-input">Row</label>
+            <input type="text" class="form-control" id="col-input" placeholder="Date">
         </div>
+
         <div class="mb-3">
             <button type="button" class="btn btn-primary" style="width: 20%" onclick="makeFigure()">Save</button>;
             <button type="button" class="btn btn-primary" style="width: 20%" onclick="onCancel()">Cancel</button>
