--- a/public/edit_figure.html
+++ b/public/edit_figure.html
@@ -11,19 +11,68 @@
     <!-- PapaParse for robust CSV parsing in browser -->
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
+    <link rel="stylesheet" href="/css/index.css">
+
+    <!--    Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+            crossorigin="anonymous"></script>
+
+    <!--    Google font-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=RocknRoll+One&display=swap"
+          rel="stylesheet">
+
+    <!--    fontawesome-->
+    <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
+
+    <!--    Google jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <style>
         body { font-family: Arial, sans-serif; padding: 18px; }
         label { margin-right: 8px; }
         #controls { margin-bottom: 12px; }
-        #chartWrapper { margin-top: 12px; }
+        #chartWrapper {
+            margin-top: 12px;
+            width: 100%;
+            height: 500px !important;
+        }
         #statsTable { border-collapse: collapse; width: 100%; max-width: 1200px; overflow-x: auto; display: block; }
         #statsTable th, #statsTable td { border: 1px solid #ccc; padding: 6px 8px; text-align: right; }
         #statsTable th.month { writing-mode: horizontal-tb; text-align: center; background: #f4f4f4; }
         #statsTable th.rowLabel { background: #eef; text-align: left; }
+
+
+        #chartWrapper {
+            width: 100%;
+            overflow-x: auto;
+        }
+
+        #priceChart {
+            max-width: 100%;
+            height: auto;
+        }
+
+        #checkboxes {
+            max-height: 600px;
+            overflow-y: auto;
+            padding-left: 10px;
+            border-left: 1px solid #ccc;
+        }
     </style>
 </head>
 <body>
+<section class="container-fluid">
+    <div id="navbar" class="row">
+        <button class="col-lg-2 btn" onclick="home()"> Home</button>
+        <button class="col-lg-2 btn" onclick="viewArchive()"> Archive</button>
+    </div>
+</section>
 <h2>Edit Figure — Graph & Monthly Table</h2>
 
 <div id="controls">
@@ -37,13 +86,48 @@
     <button id="exportPngBtn">Export Chart PNG</button>
 </div>
 
+
+
+<div class="row">
+
+    <div class="col-8">
 <div id="chartWrapper">
-    <canvas id="priceChart" width="1200" height="500"></canvas>
+    <canvas id="priceChart"></canvas>
 </div>
 
 <h3>Monthly Stats (wide)</h3>
 <div style="overflow:auto">
     <table id="statsTable"></table>
+</div>
+    </div>
+    <div class="col-4">
+        <div id="checkboxes" style="overflow:auto">
+
+        </div>
+    </div>
+
+</div>
+<div class="row">
+    <div class="col-8">
+        <h4>Graph Style Controls</h4>
+        <div id="styleControls" class="mb-3" style="padding:10px; border:1px solid #ccc; border-radius:6px;">
+            <!-- dynamically filled by JS -->
+        </div>
+    </div>
+    <div class="col-4">
+        <div id="imports">
+            <label>Import data Date column:
+                <input id="newdateCol" type="text" value="Date - Closed" />
+            </label>
+            <label>Import data Price column:
+                <input id="newpriceCol" type="text" value="Price" />
+            </label>
+            <div class="mb-3">
+                <label for="formFile" class="form-label"></label>
+                <input class="form-control" type="file" id="formFile" accept=".csv">
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="js/edit_figure.js"></script>
