--- a/public/create_new.html
+++ b/public/create_new.html
@@ -32,32 +32,32 @@
 
 
 <section class="container">
-    <div id="navbar" class="row">
+    <div id="navbar" class="row" style="margin: 0">
         <button class="col-lg-2 btn" onclick="home()"> Home</button>
         <button class="col-lg-2 btn" onclick="viewArchive()"> Archive</button>
     </div>
 </section>
 
 <section class="container">
-    <form action="/" method="post">
+    <form id="csv-upload" action="/" method="post">
 
-        <div class="mb-3">
+        <div class="mb-3 col-lg-6 offset-lg-3">
             <label for="formFile" class="form-label">Default file input example</label>
             <input class="form-control" type="file" id="formFile" accept=".csv">
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-lg-4 offset-lg-4">
             <label for="row-input">Column</label>
             <input type="text" class="form-control" id="row-input" placeholder="Price">
         </div>
-        <div class="form-group">
+        <div class="form-group col-lg-4 offset-lg-4">
             <label for="col-input">Row</label>
             <input type="text" class="form-control" id="col-input" placeholder="Date">
         </div>
 
         <div class="mb-3">
-            <button type="button" class="btn btn-primary" style="width: 20%" onclick="makeFigure()">Save</button>;
-            <button type="button" class="btn btn-primary" style="width: 20%" onclick="onCancel()">Cancel</button>
+            <button type="button" class="btn" style="width: 20%" onclick="makeFigure()">Save</button>;
+            <button type="button" class="btn" style="width: 20%" onclick="onCancel()">Cancel</button>
         </div>
     </form>
 </section>
