--- a/public/edit_figure.html
+++ b/public/edit_figure.html
@@ -127,6 +127,11 @@
                 <input class="form-control" type="file" id="formFile" accept=".csv">
             </div>
         </div>
+
+
+        <div id="exports">
+            <button class="btn" id="exportorsave" onclick="ExportorSave()">Export or Save</button>
+        </div>
     </div>
 </div>
 
