added odd/even row styling, further styling to edit page

--- a/public/edit_figure.html
+++ b/public/edit_figure.html
@@ -77,10 +77,11 @@
 
 <div id="controls">
     <label>Date column:
-        <input id="dateCol" type="text" value="Date - Closed" />
+        <input id="dateCol" class="form-control" type="text" value="Date - Closed" />
+
     </label>
     <label>Price column:
-        <input id="priceCol" type="text" value="Price" />
+        <input id="priceCol" class="form-control" type="text" value="Price" />
     </label>
     <button id="refreshBtn">Load / Refresh</button>
     <button id="exportPngBtn">Export Chart PNG</button>
@@ -100,7 +101,7 @@
     <table id="statsTable"></table>
 </div>
     </div>
-    <div class="col-4">
+    <div class="col-4" style="background-color: #e8eaed">
         <div id="checkboxes" style="overflow:auto">
 
         </div>
@@ -117,10 +118,10 @@
     <div class="col-4">
         <div id="imports">
             <label>Import data Date column:
-                <input id="newdateCol" type="text" value="Date - Closed" />
+                <input id="newdateCol" class="form-control" type="text" value="Date - Closed" />
             </label>
             <label>Import data Price column:
-                <input id="newpriceCol" type="text" value="Price" />
+                <input id="newpriceCol" class="form-control" type="text" value="Price" />
             </label>
             <div class="mb-3">
                 <label for="formFile" class="form-label"></label>
