--- a/public/create_new.html
+++ b/public/create_new.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="mb-3">
-            <button type="button" class="btn" style="width: 20%" onclick="makeFigure()">Save</button>
+            <button type="button" class="btn" style="width: 20%" onclick="makeFigure()">Show</button>
             <button type="button" class="btn" style="width: 20%" onclick="onCancel()">Cancel</button>
         </div>
     </form>
