--- a/public/edit_figure.html
+++ b/public/edit_figure.html
@@ -77,10 +77,10 @@
 
 <div id="controls">
     <label>Date column:
-        <input id="dateCol" type="text" value="Date - Closed" />
+        <input id="dateCol" type="text"  />
     </label>
     <label>Price column:
-        <input id="priceCol" type="text" value="Price" />
+        <input id="priceCol" type="text" />
     </label>
     <button id="refreshBtn">Load / Refresh</button>
     <button id="exportPngBtn">Export Chart PNG</button>
