--- a/public/export_and_save.html
+++ b/public/export_and_save.html
@@ -7,6 +7,8 @@
     <!-- Chart.js + date adapter -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
 
     <!-- PapaParse for robust CSV parsing in browser -->
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
@@ -34,7 +36,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- html to pdf-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
+
 
     <!-- html to canvas-->
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
@@ -53,20 +59,38 @@
             width: 100%;
             height: 500px !important;
         }
-        #statsTable { border-collapse: collapse; width: 100%; max-width: 1200px; overflow-x: auto; display: block; }
-        #statsTable th, #statsTable td { border: 1px solid #ccc; padding: 6px 8px; text-align: right; }
-        #statsTable th.month { writing-mode: horizontal-tb; text-align: center; background: #f4f4f4; }
-        #statsTable th.rowLabel { background: #eef; text-align: left; }
-
-
-        #chartWrapper {
-            width: 100%;
-            overflow-x: auto;
+        #statsTable {
+            /* BE A REAL TABLE (not block) so table-layout works) */
+            display: table;
+            table-layout: fixed;    /* force equal-ish column widths and enable wrapping */
+            width: 100%;            /* fill available width (wrapper controls overflow) */
+            max-width: none;        /* let CSS/parent control final width -- don't cap it here */
+            border-collapse: collapse;
+            /* remove overflow-x / display:block here if present */
         }
 
-        #priceChart {
-            max-width: 100%;
-            height: auto;
+        /* cells: allow wrapping inside cells, keep your borders */
+        #statsTable th,
+        #statsTable td {
+            border: 1px solid #ccc;
+            padding: 6px 8px;
+            text-align: right;
+
+            white-space: normal !important;    /* allow wrapping */
+            overflow-wrap: anywhere;           /* force breaking for long tokens */
+            word-break: break-word;
+            font-size: 10px;                   /* reduce size to help fitting */
+        }
+
+        /* month header and label styles preserved */
+        #statsTable th.month {
+            writing-mode: horizontal-tb;
+            text-align: center;
+            background: #f4f4f4;
+        }
+        #statsTable th.rowLabel {
+            background: #eef;
+            text-align: left;
         }
 
         #checkboxes {
@@ -88,17 +112,22 @@
 
 <div class="row">
 
-    <div class="col-md-8">
+    <div  class="col-md-8">
+        <div id="exportSection">
         <div id="doubleWrapper">
         <div id="chartWrapper">
             <canvas id="priceChart"></canvas>
         </div>
 
         <h3>Monthly Stats (wide)</h3>
-        <div style="overflow:auto">
-            <table id="statsTable"></table>
+        <div id="tableWrapper" style="overflow:auto">
+            <table id="statsTable">
+                <thead></thead>
+                <tbody></tbody>
+            </table>
         </div>
         </div>
+            </div>
             <textarea id="Text_Analysis" rows="10" cols="150" placeholder="If Exporting as a PDF, you can input your text analysis here"></textarea>
 
     </div>
