save message added, navbars look more consistent

--- a/public/edit_figure.html
+++ b/public/edit_figure.html
@@ -34,7 +34,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <style>
-        body { font-family: Arial, sans-serif; padding: 18px; }
+        body { font-family: Arial, sans-serif; padding-left: 18px; padding-right: 18px; }
+
         label { margin-right: 8px; }
         #controls { margin-bottom: 12px; }
         #chartWrapper {
@@ -67,7 +68,7 @@
     </style>
 </head>
 <body>
-<section class="container-fluid">
+<section class="container">
     <div id="navbar" class="row">
         <button class="col-lg-2 btn" onclick="home()"> Home</button>
         <button class="col-lg-2 btn" onclick="viewArchive()"> Archive</button>
