--- a/public/export_and_save.html
+++ b/public/export_and_save.html
@@ -45,7 +45,7 @@
 
 
     <style>
-        body { font-family: Arial, sans-serif; padding: 18px; }
+        body { font-family: Arial, sans-serif; padding-left: 18px; padding-right: 18px; }
         label { margin-right: 8px; }
         #controls { margin-bottom: 12px; }
         #chartWrapper {
@@ -75,16 +75,23 @@
             padding-left: 10px;
             border-left: 1px solid #ccc;
         }
+
+        .btn{
+            background-color: #e7e9ed;
+        }
+        .btn:hover{
+            background-color: #8dbaed;
+        }
     </style>
 </head>
 <body>
-<section class="container-fluid">
-    <div id="navbar" class="row">
+
+<section class="container">
+    <div id="navbar" class="row" style="margin: 0">
         <button class="col-lg-2 btn" onclick="home()"> Home</button>
         <button class="col-lg-2 btn" onclick="viewArchive()"> Archive</button>
     </div>
 </section>
-
 
 <div class="row">
 
