post merge placeholder value fix

--- a/public/export_and_save.html
+++ b/public/export_and_save.html
@@ -153,7 +153,7 @@
 
         <div class="form-group">
             <label for="project_name">Project name for archive</label>
-            <input type="text" class="form-control" id="project_name" placeholder="Price">
+            <input type="text" class="form-control" id="project_name" placeholder="new data">
         </div>
 
         <div id="prime_actins" class="row">
