added search bar to archive.html, currently non-functional

--- a/public/archive.html
+++ b/public/archive.html
@@ -39,8 +39,19 @@
     </div>
 </section>
 
+<!-- Search Bar Stuff -->
+<section class="container-fluid">
+    <div class="d-flex">
+        <div class="form-inline">
+            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+        </div>
+        <button class="btn btn-success" type="submit" onclick="searchArchive()">Search</button>
+    </div>
+</section>
+
+
 <!-- Past Figures -->
-<section class="figures">
+<section class="container-fluid figures">
     <div id="figure_list"></div>
 </section>
 
