--- a/public/archive.html
+++ b/public/archive.html
@@ -41,11 +41,11 @@
 
 <!-- Search Bar Stuff -->
 <section class="container-fluid">
-    <div class="d-flex">
-        <div class="form-inline">
-            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <input id="search_box" class="form-control" type="search" placeholder="Name of Figure">
         </div>
-        <button class="btn btn-success" type="submit" onclick="searchArchive()">Search</button>
+        <button class="btn btn-success col-sm-1" type="submit" onclick="searchArchive()">Search</button>
     </div>
 </section>
 
